--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ test_text_embeddings.npy
 train_text_embeddings.npy
 test_image_embeddings.npy
 train_image_embeddings.npy
+train_image_embeddings_vit.npy
+test_image_embeddings_vit.npy
 
 submission_catboost_gridsearch.csv
 submission_catboost_with_text.csv
